...
// MARK: - Strings

// swiftlint:disable explicit_type_interface function_parameter_count identifier_name line_length
// swiftlint:disable nesting type_body_length type_name
internal enum L10n {
  /// About
  internal static let about = L10n.tr("Localizable", "about")
  /// Add custom
  internal static let addCustom = L10n.tr("Localizable", "add_custom")
  /// Add custom source
  internal static let addCustomSource = L10n.tr("Localizable", "add_custom_source")
  /// About author
  internal static let author = L10n.tr("Localizable", "author")
...
  internal static let back = L10n.tr("Localizable", "back")
  /// Invalid RSS feed URL
  internal static let badUrl = L10n.tr("Localizable", "bad_url")
  /// Author's blog
  internal static let blog = L10n.tr("Localizable", "blog")
  /// Done
  internal static let done = L10n.tr("Localizable", "done")
  /// Feed
  internal static let feed = L10n.tr("Localizable", "feed")
  /// Used libraries
  internal static let libraries = L10n.tr("Localizable", "libraries")
  /// Logo URL
  internal static let logoUrl = L10n.tr("Localizable", "logo_url")
...
